# perceptron

./: .coverage  .gitignore  AGENTS.md  ERROR_MULTI_LAYERS.md  PLAN.md  README.md  context.md  coverage.xml  implementation_plan.md  pyproject.toml
backend/: __init__.py  api_app.py  api_server.py  datasets.py  perceptron.py  runner.py
backend/api/: __init__.py  deps.py  diagnostics_routes.py  lms_routes.py  mlp_routes.py  perceptron_routes.py  utils.py
backend/core/: datasets.py  metrics.py
backend/nn/: __init__.py  activations.py  grid_mlp.py  layers.py  losses.py  mlp.py  models.py  runner.py
backend/services/: __init__.py  lms_service.py  mlp_service.py  perceptron_service.py
backend/tests/: test_api_server.py  test_metrics.py  test_nn_mlp.py  test_nn_runner.py  test_perceptron.py  test_viz_helpers.py  test_viz_mlp_internals.py
backend/viz/: __init__.py  viz_2d.py  viz_error_surface.py  viz_grid.py  viz_mlp_internals.py
docs/: api.md  context.md  features.md  operations.md  overview.md
docs/phase2/: README.md  chapter2_findings.md  exercises_mapping.md  implementation_plan.md  ollamaapi.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  app.ts  main.test.ts  main.test.tsx  main.ts  main.tsx  perceptron.ts  setupTests.ts  (+3 more)
scripts/: mcp_diagnostics_smoke.md  restart_app.sh  stop_app.sh  verify_app.sh
tests/: test_api_server.py  test_datasets.py  test_nn_activations.py  test_nn_grid_mlp.py  test_nn_layers.py  test_nn_losses.py  test_nn_mlp.py  test_nn_models.py  test_viz_error_surface.py
(+117 files in other folders)
