[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "perceptron-visual-lab"
version = "0.1.0"
description = "Perceptron visual lab backend"
authors = ["Your Name <you@example.com>"]
packages = [{ include = "backend" }]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
httpx = "^0.28.1"
pytest-cov = "^7.0.0"

[tool.poetry.scripts]
perceptron-api = "backend.api_app:run"
perceptron-runner = "backend.runner:main"

[tool.pytest.ini_options]
addopts = "-q --cov=backend --cov-report=term-missing:skip-covered --cov-report=xml"
testpaths = ["backend/tests"]
pythonpath = ["."]

[tool.coverage.run]
branch = true
source = ["backend"]

[tool.coverage.report]
show_missing = true
skip_covered = true
